--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "body-parser": "~1.5.2",
     "express": "~4.7.2",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.5",
     "method-override": "~2.1.2",
     "morgan": "~1.2.2",
     "oauth": "^0.9.14",
